# oneapi

./: .dockerignore  .gitignore  AGENTS.md  README.md  package.json  pnpm-lock.yaml
apps/agentmail-relay/: .env.example  Dockerfile  package-lock.json  package.json
apps/agentmail-relay/src/: message.js  server.js
apps/agentmail-relay/test/: message.test.js
apps/desktop/: .env.example  index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/src/: App.tsx  main.tsx  styles.css  types.ts  vite-env.d.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs  tool_config.rs
apps/desktop/src/components/: AppErrorBoundary.tsx  StatusBadge.tsx
apps/desktop/src/lib/: api.ts  billing.test.ts  billing.ts  config.test.ts  config.ts  demo-data.ts  (+1 more)
apps/web/: .env.example  Dockerfile  index.html  nginx.conf  package.json  tsconfig.json  vercel.json  vite.config.ts
apps/web/src/: App.tsx  styles.css
deploy/: .env.example  README.md  docker-compose.yml
deploy/caddy/: Caddyfile
deploy/vercel/new-api/: Dockerfile.vercel  README.md  start.sh  vercel.json
docs/: HANDOFF.md  README.md
docs/operations/: 00-project-status.md  01-user-guide.md  02-admin-runbook.md  03-project-management.md  04-upstream-channel-guide.md  README.md
docs/plans/: 2026-07-14-agentmail-smtp-relay-design.md  2026-07-14-newapi-desktop-design.md  2026-07-14-vercel-free-test-design.md  2026-07-15-desktop-release-candidate-design.md
scripts/: package-desktop-rc.ps1  verify-deploy.mjs
(+3 files in other folders)
