[package]
name = "wboke-desktop"
version = "0.1.0"
description = "WBoke API desktop companion"
authors = ["WBoke"]
edition = "2021"

[lib]
name = "wboke_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
open = "5"
reqwest = { version = "0.12", default-features = false, features = ["cookies", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
toml_edit = "0.22"
url = "2"
rusqlite = { version = "0.31", features = ["backup", "bundled"] }
